--- a/frontend/src/pages/RSM/5RS011075.html
+++ b/frontend/src/pages/RSM/5RS011075.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+
     <title>RSM Assembly - 5RS011075</title>
     <style>
         :root {
