--- a/frontend/src/pages/RSM/5RS011093.html
+++ b/frontend/src/pages/RSM/5RS011093.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+
     <title>RSM Assembly - 5RS011093</title>
     <style>
         :root {
@@ -667,6 +669,101 @@
     </div>
 
     <script>
+        // 1) Declare assemblyId in script scope
+        let assemblyId = null;
+
+        // 2) Helper to read ?id= or fall back to localStorage
+        function getAssemblyId() {
+            const params = new URLSearchParams(window.location.search);
+            const id = params.get('id');
+            if (id) {
+                localStorage.setItem('currentRSMAssemblyId', id);
+                return id;
+            }
+            return localStorage.getItem('currentRSMAssemblyId');
+        }
+
+        // Helper: Move a work-order from pending → completed in localStorage
+        function moveWorkOrderToCompleted(id) {
+            const pendingKey = 'pendingRSMAssemblies';
+            const completedKey = 'completedRSMAssemblies';
+            const pending = JSON.parse(localStorage.getItem(pendingKey) || '[]');
+            const completed = JSON.parse(localStorage.getItem(completedKey) || '[]');
+            const idx = pending.findIndex(rec => rec.id == id);
+            if (idx > -1) {
+                const [record] = pending.splice(idx, 1);
+                completed.push(record);
+                localStorage.setItem(pendingKey, JSON.stringify(pending));
+                localStorage.setItem(completedKey, JSON.stringify(completed));
+            }
+        }
+
+        // CSRF helper for Django
+        function getCookie(name) {
+            const match = document.cookie.match('(^|;)\\s*' + name + '\\s*=\\s*([^;]+)');
+            return match ? match.pop() : '';
+        }
+
+        // Helper to render barcode via JsBarcode
+        function renderBarcode(elementId, value) {
+            const svg = document.getElementById(elementId);
+            if (!svg) return;
+            JsBarcode(svg, value, { format:'CODE128', displayValue:true, width:2, height:50 });
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            // 3) Initialize assemblyId before wiring up completeAssembly
+            assemblyId = getAssemblyId();
+            console.log('▶ assemblyId =', assemblyId);
+
+            // … your setupUIElements() or scanButton listeners …
+
+            // 4) Attach completeAssembly to the Complete button
+            document.getElementById('completeButton').addEventListener('click', () => {
+                completeAssembly();
+            });
+        });
+
+        // 5) Now completeAssembly can safely reference assemblyId
+        async function completeAssembly() {
+            if (!assemblyId) {
+                showNotification('Error: No assembly ID found', 'error');
+                return;
+            }
+            // …rest of your complete logic…
+
+            await fetch(`${API_URL}/assembly-process/${assemblyId}/`, {
+                method: 'PATCH',
+                credentials: 'include',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': getCookie('csrftoken')
+                },
+                body: JSON.stringify({
+                    status: 'completed',
+                    completed_at: new Date().toISOString(),
+                    barcode_number: finalAssemblyBarcode,
+                    metadata: { scanned_components: scannedDetails }
+                })
+            });
+
+            await fetch(`${API_URL}/completed-assemblies/`, {
+                method: 'POST',
+                credentials: 'include',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': getCookie('csrftoken')
+                },
+                body: JSON.stringify({
+                    assembly_id: assemblyId,
+                    barcode_number: finalAssemblyBarcode,
+                    scanned_components: scannedDetails
+                })
+            });
+
+            moveWorkOrderToCompleted(assemblyId);
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
             const API_URL = '/api';
             let inventoryDataLoaded = false;
@@ -1101,28 +1198,114 @@
                 }
             }
 
-            function completeAssembly() {
-                // Check if all components are scanned
-                const allScanned = Object.values(components).every(comp => comp.scanned);
+            async function completeAssembly() {
+                const allScanned = Object.values(components).every(c => c.scanned);
                 if (!allScanned) {
                     showNotification('Cannot complete: some components are not scanned', 'error');
                     return;
                 }
-                
-                // Show completion message
-                document.getElementById('mainContainer').innerHTML = `
-                    <div style="text-align: center; padding: 2rem;">
-                        <h2 style="color: #16a34a; font-size: 1.5rem; margin-bottom: 1rem;">Assembly Completed Successfully!</h2>
-                        <p style="margin-bottom: 2rem;">All components have been verified and the assembly is complete.</p>
-                        <div style="margin-top: 1.5rem;">
-                            <button onclick="window.location.href='/assembly/rsm'"
-                                    style="background: #3b82f6; color: white; padding: 0.75rem 1.5rem; 
-                                           border: none; border-radius: 0.375rem; cursor: pointer;">
-                                Return to Assembly List
-                            </button>
-                        </div>
-                    </div>
-                `;
+                if (!assemblyId) {
+                    showNotification('Error: No assembly ID', 'error');
+                    completeButton.disabled = false;
+                    return false;
+                }
+
+                showNotification('Processing…', 'info');
+                addLogEntry('Completing…', 'info');
+
+                // 1) gen final barcode
+                const finalAssemblyBarcode = generateAssemblyBarcode();
+                addLogEntry(`Generated: ${finalAssemblyBarcode}`, 'info');
+
+                // 2) collect scans
+                const scannedDetails = Object.values(components)
+                    .filter(c => c.scanned)
+                    .map(c => ({
+                        component_id: c.index,
+                        name: c.name,
+                        barcode: c.scannedBarcode,
+                        scan_time: new Date().toISOString()
+                    }));
+
+                // 3) PATCH → completed
+                await fetch(`${API_URL}/assembly-process/${assemblyId}/`, {
+                    method: 'PATCH',
+                    credentials: 'include',
+                    headers: { 'Content-Type': 'application/json', 'X-CSRFToken': getCookie('csrftoken') },
+                    body: JSON.stringify({
+                        status: 'completed',
+                        completed_at: new Date().toISOString(),
+                        barcode_number: finalAssemblyBarcode,
+                        metadata: { scanned_components: scannedDetails }
+                    })
+                });
+
+                // 4) POST to CompletedAssemblies
+                await fetch(`${API_URL}/completed-assemblies/`, {
+                    method: 'POST',
+                    credentials: 'include',
+                    headers: { 'Content-Type': 'application/json', 'X-CSRFToken': getCookie('csrftoken') },
+                    body: JSON.stringify({
+                        assembly_id: assemblyId,
+                        barcode_number: finalAssemblyBarcode,
+                        scanned_components: scannedDetails
+                    })
+                });
+
+                // 5) persist locally + move lists
+                const key = 'assemblyCompletedOrders';
+                const list = JSON.parse(localStorage.getItem(key) || '[]');
+                list.push({
+                    id: assemblyId,
+                    barcode_number: finalAssemblyBarcode,
+                    scanned_components: scannedDetails,
+                    completed_at: new Date().toISOString(),
+                    reworked: false
+                });
+                localStorage.setItem(key, JSON.stringify(list));
+                moveWorkOrderToCompleted(assemblyId);
+
+                // 6) show summary + Rework
+                showCompletionScreen(scannedDetails, finalAssemblyBarcode);
+                return true;
+            }
+
+            // helper: pos5='1', pos6='6'
+            function generateAssemblyBarcode() {
+                const p = Math.random().toString().slice(2, 6).padStart(4, '0');
+                const s = Math.random().toString().slice(2, 7).padStart(5, '0');
+                return p + '16' + s;
+            }
+
+            // render summary + rework
+            function showCompletionScreen(parts, assemblyBarcode) {
+                const c = document.getElementById('mainContainer');
+                c.innerHTML = `
+                    <div style="text-align:center;padding:2rem">
+                        <h2 style="color:#16a34a">Completed!</h2>
+                        <p>Assembly #${assemblyId}</p>
+                        <h3>Components</h3><ul id="partsList"></ul>
+                        <h3>Final Barcode</h3><svg id="finalAssemblyBarcode"></svg>
+                        <button id="reworkBtn" style="margin-top:1rem;background:#f59e0b;color:#fff;padding:.5rem 1rem;">Rework</button>
+                    </div>`;
+                parts.forEach(p => {
+                    const li = document.createElement('li');
+                    li.textContent = `${p.name}: ${p.barcode}`;
+                    if (p.replaced) li.style.background = '#fee2e2';
+                    document.getElementById('partsList').append(li);
+                });
+                renderBarcode('finalAssemblyBarcode', assemblyBarcode);
+                document.getElementById('reworkBtn').onclick = async () => {
+                    const reason = prompt('Rework reason:'); if (!reason) return;
+                    await fetch(`${API_URL}/completed-assemblies/${assemblyId}/`, {
+                        method: 'PATCH',
+                        credentials: 'include',
+                        headers: { 'Content-Type': 'application/json', 'X-CSRFToken': getCookie('csrftoken') },
+                        body: JSON.stringify({ reworked: true, rework_notes: reason })
+                    });
+                    moveWorkOrderToPending(assemblyId);
+                    alert('Sent for rework'); location.href = '/assembly/rsm';
+                };
             }
 
             // Initialize the page
