--- a/frontend/src/pages/YBS/5YB011056.html
+++ b/frontend/src/pages/YBS/5YB011056.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive YBS Machine Circuit Board Layout - 5YB011056</title>
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+    
     <style>
         :root {
             --left-pcb-color: #ff6b6b; /* Red for Left Slave PCB */
