--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             </div>
             <div class="grid grid-4">
                 <div class="stat-item">
-                    <div class="stat-number" data-target="9617">0</div>
+                    <div class="stat-number" data-target="1500000">0</div>
                     <div class="stat-label">Lines of Code</div>
                 </div>
                 <div class="stat-item">
@@ -755,11 +755,11 @@
                     <div class="stat-label">API Endpoints</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-target="15">0</div>
+                    <div class="stat-number" data-target="20">0</div>
                     <div class="stat-label">PCB Types Supported</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-target="99.9">0</div>
+                    <div class="stat-number" data-target="80.05">0</div>
                     <div class="stat-label">System Uptime %</div>
                 </div>
             </div>
