--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             </div>
             <div class="grid grid-4">
                 <div class="stat-item">
-                    <div class="stat-number" data-target="1.5M+">0</div>
+                    <div class="stat-number" data-target="1000000+">0</div>
                     <div class="stat-label">Lines of Code</div>
                 </div>
                 <div class="stat-item">
